--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 15px;
   height: 8px;
 }
 
@@ -291,7 +291,7 @@ button, a { transition: var(--transition); }
   align-items: center;
 }
 
-.header-top .container { gap: 8px 20px; }
+.header-top .container { gap: 2px 20px; }
 
 .header-top-list { gap: 15px; }
 
@@ -343,7 +343,11 @@ button, a { transition: var(--transition); }
   padding-block: 25px;
 }
 
-.header-bottom .logo img { margin-inline: auto; }
+.header-bottom .logo img { margin-inline: auto;
+  max-width: 180px;
+  width: 100%;
+  height: 100%;
+}
 
 .navbar {
   background: var(--white);
@@ -1039,7 +1043,7 @@ button, a { transition: var(--transition); }
 
 .footer {
   background: var(--raisin-black-1);
-  color: var(--white);
+  color: hsl(9deg 100% 62%);
   margin-bottom: 68px;
 }
 
@@ -1390,7 +1394,7 @@ button, a { transition: var(--transition); }
    * REUSED STYLE
    */
 
-  .container { max-width: 970px; }
+  .btn { max-width: 970px; }
 
   .btn { padding: 15px 40px; }
 
@@ -1583,7 +1587,7 @@ button, a { transition: var(--transition); }
   }
 
   .header.active .header-bottom {
-    position: fixed;
+    position: absolute;
     bottom: auto;
     top: -94px;
     padding-block: 20px;
